# ue-mcp-for-all-versions

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
.omc/plans/: layer3-inengine-plugin-design.md  tool-expansion-plan.md
examples/: mcp.json
include/ue_mcp_for_all_versions/: capability_registry.hpp  mcp_server.hpp  project_setup.hpp  rc_client.hpp  tool_registry.hpp
scripts/: drive_server.py  integration_test.sh  late_start_test.sh  selftest_authoring.py  selftest_new_tools.py
src/: capability_registry.cpp  main.cpp  mcp_server.cpp  project_setup.cpp  rc_client.cpp  tool_registry.cpp
test_project_ue425/: RcTest425.uproject
test_project_ue426/: RcTest426.uproject
test_project_ue53/: RcTest53.uproject
test_project_ue55/: RcTest55.uproject
tests/: test_main.cpp
